<created and added CSS style>

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8"/>
+        <link rel="stylesheet" href="./assets/css/style.css"/>
         <title>Run Buddy</title>
     </head>
+
     <body>
         <header>
-            <h1>
+            <h1 style="color: blue; font-size: 100px;">
                 <a href="/">RUN BUDDY</a>
             </h1>
 
@@ -17,6 +19,9 @@
                     <li>
                         <!--Anchor element-->
                         <a href="#what-we-do">What We Do</a>
+                    </li>
+                    <li>
+                        <a href="#what-you-do">What You Do</a>
                     </li>
                     <li>
                         <a href="#your-trainers">Your Trainers</a>
@@ -39,7 +44,7 @@
 
         <!--"what we do" section-->
         <section>
-            <h2>What We Do</h2>
+            <h2>What You Do</h2>
         </section>
 
         <!--"meet the trainers" section-->
